--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Emojuice</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="opening">
+        <img src="./img/emojuice.svg" alt="logo emojuice">
+        <p>Boissons végétales préprarées avec amour</p>
+      </div>
+      <a href="">Accédez à nos produits</a>
+      <a href="#contacts">Nous contacter</a>
+    </header>
+  </body>
 </html>
