--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
       <a href="">Accédez à nos produits</a>
       <a href="#contacts">Nous contacter</a>
     </header>
+    <div class="presentation">
+      <h1>Manger sainement: "un art de vivre"</h1>
+      <p>Chez <strong>emojuice</strong>, nous tentons de vous fournir des 
+        produits <strong>sains</strong> et <strong>respectueux</strong> de la 
+        planète.
+      </p>
+      <img src="./img/peach.svg" alt="Illustration de pêche">
+      <img src="./img/lemon.svg" alt="Illustration de citron">
+      <img src="./img/watermelon.svg" alt="Illustration de pastèque">
+      <img src="./img/orange.svg" alt="Illustration d'orange">
+    </div>
   </body>
 </html>
