Codage du div "choosing" de l'index

--- a/index.html
+++ b/index.html
@@ -25,5 +25,32 @@
       <img src="./img/watermelon.svg" alt="Illustration de pastèque">
       <img src="./img/orange.svg" alt="Illustration d'orange">
     </div>
+    <div class="choosing">
+      <h1>Nos produits</h1>
+      <article class="banana">
+        <h2>Jus de banane</h2>
+        <p>Notre plus grand classique.</p>
+        <a href="kiwi.html" class="article-bottom">En savoir plus</a>
+        <img src="./img/banana.svg" alt="Illustration d'une banane">
+      </article>
+      <article class="kiwi">
+        <h2>Sirop de kiwi</h2>
+        <p>En vert et contre tous.</p>
+        <a href="kiwi.html" class="article-bottom">En savoir plus</a>
+        <img src="./img/kiwi.svg" alt="Illustration d'un kiwi">
+      </article>
+      <article>
+        <h2>Glace au café</h2>
+        <p>"Un espresso pour Grorges!"</p>
+        <a href="kiwi.html" class="article-bottom">En savoir plus</a>
+        <img src="./img/coffee.svg" alt="Illustration d'un café">
+      </article>
+      <article>
+        <h2>Délice à la fraise</h2>
+        <p>La voilà qui ramène sa fraise</p>
+        <a href="kiwi.html" class="article-bottom">En savoir plus</a>
+        <img src="./img/strawberry.svg" alt="Illustration d'une fraise">
+      </article>
+    </div>
   </body>
 </html>
