--- a/index.html
+++ b/index.html
@@ -51,6 +51,22 @@
         <a href="kiwi.html" class="article-bottom">En savoir plus</a>
         <img src="./img/strawberry.svg" alt="Illustration d'une fraise">
       </article>
+      <Footer>
+        <h1 id="contacts">Nous contacter</h1>
+        <a href="mailto:emojuice@veggies.ch">emojuice@veggies.ch</a>
+        <a href="https://www.instagram.com/?hl=fr">Instagram</a>
+        <a href="https://fr-fr.facebook.com/">Facebook</a>
+        <p class="copyrights">
+          Emojuice est une marque déposée par Veggies inc. 
+          Switzerland.
+        </p>
+        <div class="footer-bottom">
+          <img src="./img/banana.svg" alt="Illustration d'une banane">
+          <img src="./img/kiwi.svg" alt="Illustration d'un kiwi">
+          <img src="/img/apple.svg" alt="Illustration d'une pomme">
+          <img src="./img/pineapple.svg" alt="Illustration d'un ananas">
+        </div>
+      </Footer>
     </div>
   </body>
 </html>
