--- a/kiwi.html
+++ b/kiwi.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Emojuice - Sirop kiwi</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="opening">
+        <img src="./img/emojuice.svg" alt="logo emojuice">
+        <p>Boissons végétales préprarées avec amour</p>
+      </div>
+    </header>
+  </body>
 </html>
