Correction div en class="products"

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <img src="./img/watermelon.svg" alt="Illustration de pastèque">
       <img src="./img/orange.svg" alt="Illustration d'orange">
     </div>
-    <div class="choosing">
+    <div class="products">
       <h1>Nos produits</h1>
       <article class="banana">
         <h2>Jus de banane</h2>
