--- a/kiwi.html
+++ b/kiwi.html
@@ -12,5 +12,10 @@
         <p>Boissons végétales préprarées avec amour</p>
       </div>
     </header>
+    <div class="kiwi-syrup">
+      <h2>Sirop kiwi</h2>
+      <p>En vert et contre tous.</p>
+      <img src="./img/kiwi.svg" alt="Illustration d'un kiwi" >
+    </div>
   </body>
 </html>
