Codage du div avec infos sur le kiwi

--- a/kiwi.html
+++ b/kiwi.html
@@ -17,5 +17,22 @@
       <p>En vert et contre tous.</p>
       <img src="./img/kiwi.svg" alt="Illustration d'un kiwi" >
     </div>
+    <div class="kiwi-infos">
+      <h3>Le Kiwi</h3>
+      <p>
+        Un seul kiwi renferme une quantité impressionnante de fibres. Grâce aux 
+        antioxydants qu’il contient, le consommer régulièrement préviendrait 
+        l’apparition de maladies cardiovasculaires et de certains cancers. 
+      </p>
+      <img src="./img/photo_kiwi.webp" alt="Photo kiwi nu">
+      <p><strong>Valeurs nutritionnelles et caloriques du kiwi</strong></p>
+      <ul>
+        <i>Calories: 60,5</i>
+        <i>Protéines: 0,88 g</i>
+        <i>Glucides: 11 g</i>
+        <i>Lipides: 0,6 g</i>
+        <i>Fibres alimentaires: 2,4 g</i>
+      </ul>
+    </div>
   </body>
 </html>
