--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="footer-bottom">
           <img src="./img/banana.svg" alt="Illustration d'une banane">
           <img src="./img/kiwi.svg" alt="Illustration d'un kiwi">
-          <img src="/img/apple.svg" alt="Illustration d'une pomme">
+          <img src="./img/apple.svg" alt="Illustration d'une pomme">
           <img src="./img/pineapple.svg" alt="Illustration d'un ananas">
         </div>
       </Footer>
