Ajout d'une class pour les éléments alignés

--- a/index.html
+++ b/index.html
@@ -20,36 +20,46 @@
         produits <strong>sains</strong> et <strong>respectueux</strong> de la 
         planète.
       </p>
-      <img src="./img/peach.svg" alt="Illustration de pêche">
-      <img src="./img/lemon.svg" alt="Illustration de citron">
-      <img src="./img/watermelon.svg" alt="Illustration de pastèque">
-      <img src="./img/orange.svg" alt="Illustration d'orange">
+      <div class="presentation-bottom">
+       <img src="./img/peach.svg" alt="Illustration de pêche">
+        <img src="./img/lemon.svg" alt="Illustration de citron">
+        <img src="./img/watermelon.svg" alt="Illustration de pastèque">
+        <img src="./img/orange.svg" alt="Illustration d'orange">
+      </div>
     </div>
     <div class="products">
       <h1>Nos produits</h1>
       <article class="banana">
         <h2>Jus de banane</h2>
         <p>Notre plus grand classique.</p>
-        <a href="kiwi.html" class="article-bottom">En savoir plus</a>
-        <img src="./img/banana.svg" alt="Illustration d'une banane">
+        <div class="products-bottom">
+          <a href="kiwi.html" class="article-bottom">En savoir plus</a>
+          <img src="./img/banana.svg" alt="Illustration d'une banane">
+        </div>
       </article>
       <article class="kiwi">
         <h2>Sirop de kiwi</h2>
         <p>En vert et contre tous.</p>
-        <a href="kiwi.html" class="article-bottom">En savoir plus</a>
-        <img src="./img/kiwi.svg" alt="Illustration d'un kiwi">
+        <div class="products-bottom">
+          <a href="kiwi.html" class="article-bottom">En savoir plus</a>
+          <img src="./img/kiwi.svg" alt="Illustration d'un kiwi">
+        </div>
       </article>
       <article>
         <h2>Glace au café</h2>
         <p>"Un espresso pour Grorges!"</p>
-        <a href="kiwi.html" class="article-bottom">En savoir plus</a>
-        <img src="./img/coffee.svg" alt="Illustration d'un café">
+        <div class="products-bottom">
+          <a href="kiwi.html" class="article-bottom">En savoir plus</a>
+          <img src="./img/coffee.svg" alt="Illustration d'un café">
+        </div>
       </article>
       <article>
         <h2>Délice à la fraise</h2>
         <p>La voilà qui ramène sa fraise</p>
-        <a href="kiwi.html" class="article-bottom">En savoir plus</a>
-        <img src="./img/strawberry.svg" alt="Illustration d'une fraise">
+        <div class="products-bottom">
+          <a href="kiwi.html" class="article-bottom">En savoir plus</a>
+          <img src="./img/strawberry.svg" alt="Illustration d'une fraise">
+        </div>
       </article>
       <Footer>
         <h1 id="contacts">Nous contacter</h1>
