Codage du div des autres produits

--- a/kiwi.html
+++ b/kiwi.html
@@ -34,5 +34,20 @@
         <i>Fibres alimentaires: 2,4 g</i>
       </ul>
     </div>
+    <div class="choosing">
+      <h1>Nos autres produits</h1>
+      <article class="flavor-strawberry">
+        <h2>Délices à la fraise</h2>
+        <img src="./img/plus.svg" alt="Illustration plus">
+        <img src="./img/strawberry.svg" alt="Illustration d'une fraise">
+      </article>
+      <article class="flavor-coffee">
+        <h2>Glaces au café</h2>
+        <img src="./img/plus.svg" alt="Illustration plus">
+        <img src="./img/coffee.svg" alt="Illustration d'un café">
+      </article>
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Accédez à nos 
+        produits</a>
+    </div>
   </body>
 </html>
