Codage footer de kiwi.html

--- a/kiwi.html
+++ b/kiwi.html
@@ -49,5 +49,21 @@
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Accédez à nos 
         produits</a>
     </div>
+    <footer>
+      <h1 id="contacts">Nous contacter</h1>
+        <a href="mailto:emojuice@veggies.ch">emojuice@veggies.ch</a>
+        <a href="https://www.instagram.com/?hl=fr">Instagram</a>
+        <a href="https://fr-fr.facebook.com/">Facebook</a>
+        <p class="copyrights">
+          Emojuice est une marque déposée par Veggies inc. 
+          Switzerland.
+        </p>
+        <div class="footer-bottom">
+          <img src="./img/banana.svg" alt="Illustration d'une banane">
+          <img src="./img/kiwi.svg" alt="Illustration d'un kiwi">
+          <img src="./img/apple.svg" alt="Illustration d'une pomme">
+          <img src="./img/pineapple.svg" alt="Illustration d'un ananas">
+        </div>
+    </footer>
   </body>
 </html>
