Corrections et ajouts de class à index.html & kiwi.html

--- a/kiwi.html
+++ b/kiwi.html
@@ -31,11 +31,11 @@
       <img src="./img/photo_kiwi.webp" alt="Photo kiwi nu">
       <p><strong>Valeurs nutritionnelles et caloriques du kiwi</strong></p>
       <ul>
-        <i>Calories: 60,5</i>
-        <i>Protéines: 0,88 g</i>
-        <i>Glucides: 11 g</i>
-        <i>Lipides: 0,6 g</i>
-        <i>Fibres alimentaires: 2,4 g</i>
+        <li>Calories: 60,5</li>
+        <li>Protéines: 0,88 g</li>
+        <li>Glucides: 11 g</li>
+        <li>Lipides: 0,6 g</li>
+        <li>Fibres alimentaires: 2,4 g</li>
       </ul>
     </div>
     <div class="choosing">
@@ -50,24 +50,25 @@
         <img src="./img/plus.svg" alt="Illustration plus">
         <img src="./img/coffee.svg" alt="Illustration d'un café">
       </article>
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Accédez à nos 
-        produits</a>
+      <a href="#poducts-access">Accédez à nos produits</a>
     </div>
     <footer>
       <h1 id="contacts">Nous contacter</h1>
+      <div class="footer-nav">
         <a href="mailto:emojuice@veggies.ch">emojuice@veggies.ch</a>
         <a href="https://www.instagram.com/?hl=fr">Instagram</a>
-        <a href="https://fr-fr.facebook.com/">Facebook</a>
-        <p class="copyrights">
-          Emojuice est une marque déposée par Veggies inc. 
-          Switzerland.
-        </p>
-        <div class="footer-bottom">
-          <img src="./img/banana.svg" alt="Illustration d'une banane">
-          <img src="./img/kiwi.svg" alt="Illustration d'un kiwi">
-          <img src="./img/apple.svg" alt="Illustration d'une pomme">
-          <img src="./img/pineapple.svg" alt="Illustration d'un ananas">
-        </div>
+        <a href="https://fr-fr.facebook.com/">Facebook</a>    
+      </div>
+      <p class="copyrights">
+        Emojuice est une marque déposée par Veggies inc. 
+        Switzerland.
+     </p>
+      <div class="fruits-basket">
+        <img src="./img/banana.svg" alt="Illustration d'une banane">
+        <img src="./img/kiwi.svg" alt="Illustration d'un kiwi">
+        <img src="./img/apple.svg" alt="Illustration d'une pomme">
+        <img src="./img/pineapple.svg" alt="Illustration d'un ananas">
+      </div>
     </footer>
   </body>
 </html>
