--- a/index.html
+++ b/index.html
@@ -15,23 +15,24 @@
         <img src="./img/emojuice.svg" alt="logo emojuice">
         <p>Boissons végétales préprarées avec amour</p>
       </div>
-      <a href="">Accédez à nos produits</a>
+      <a href="#poducts-access">Accédez à nos produits</a>
+      <br>
       <a href="#contacts">Nous contacter</a>
     </header>
     <div class="presentation">
-      <h1>Manger sainement: "un art de vivre"</h1>
+      <h1>Manger sainement: "un art de vie"</h1>
       <p>Chez <strong>emojuice</strong>, nous tentons de vous fournir des 
         produits <strong>sains</strong> et <strong>respectueux</strong> de la 
         planète.
       </p>
-      <div class="presentation-bottom">
+      <div class="fruits-basket">
        <img src="./img/peach.svg" alt="Illustration de pêche">
         <img src="./img/lemon.svg" alt="Illustration de citron">
         <img src="./img/watermelon.svg" alt="Illustration de pastèque">
         <img src="./img/orange.svg" alt="Illustration d'orange">
       </div>
     </div>
-    <div class="products">
+    <div id="poducts-access" class="products">
       <h1>Nos produits</h1>
       <article class="banana">
         <h2>Jus de banane</h2>
@@ -67,14 +68,16 @@
       </article>
       <Footer>
         <h1 id="contacts">Nous contacter</h1>
-        <a href="mailto:emojuice@veggies.ch">emojuice@veggies.ch</a>
-        <a href="https://www.instagram.com/?hl=fr">Instagram</a>
-        <a href="https://fr-fr.facebook.com/">Facebook</a>
-        <p class="copyrights">
+        <div class="footer-nav">
+          <a href="mailto:emojuice@veggies.ch">emojuice@veggies.ch</a>
+          <a href="https://www.instagram.com/?hl=fr">Instagram</a>
+          <a href="https://fr-fr.facebook.com/">Facebook</a>    
+        </div>
+        <p class="copyrights">  
           Emojuice est une marque déposée par Veggies inc. 
           Switzerland.
         </p>
-        <div class="footer-bottom">
+        <div class="fruits-basket">
           <img src="./img/banana.svg" alt="Illustration d'une banane">
           <img src="./img/kiwi.svg" alt="Illustration d'un kiwi">
           <img src="./img/apple.svg" alt="Illustration d'une pomme">
