Ajout class="button"

--- a/kiwi.html
+++ b/kiwi.html
@@ -50,14 +50,16 @@
         <img src="./img/plus.svg" alt="Illustration plus">
         <img src="./img/coffee.svg" alt="Illustration d'un café">
       </article>
-      <a href="#poducts-access">Accédez à nos produits</a>
+      <a class="button" href="#poducts-access">Accédez à nos produits</a>
     </div>
     <footer>
       <h1 id="contacts">Nous contacter</h1>
       <div class="footer-nav">
-        <a href="mailto:emojuice@veggies.ch">emojuice@veggies.ch</a>
-        <a href="https://www.instagram.com/?hl=fr">Instagram</a>
-        <a href="https://fr-fr.facebook.com/">Facebook</a>    
+        <a class="button" href="mailto:emojuice@veggies.ch">
+          emojuice@veggies.ch
+        </a>
+        <a class="button" href="https://www.instagram.com/?hl=fr">Instagram</a>
+        <a class="button" href="https://fr-fr.facebook.com/">Facebook</a>    
       </div>
       <p class="copyrights">
         Emojuice est une marque déposée par Veggies inc. 
