--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <img src="./img/emojuice.svg" alt="logo emojuice">
         <p>Boissons végétales préprarées avec amour</p>
       </div>
-      <a href="#poducts-access">Accédez à nos produits</a>
+      <a class="button" href="#poducts-access">Accédez à nos produits</a>
       <br>
-      <a href="#contacts">Nous contacter</a>
+      <a class="button button-white" href="#contacts">Nous contacter</a>
     </header>
     <div class="presentation">
       <h1>Manger sainement: "un art de vie"</h1>
@@ -69,9 +69,13 @@
       <Footer>
         <h1 id="contacts">Nous contacter</h1>
         <div class="footer-nav">
-          <a href="mailto:emojuice@veggies.ch">emojuice@veggies.ch</a>
-          <a href="https://www.instagram.com/?hl=fr">Instagram</a>
-          <a href="https://fr-fr.facebook.com/">Facebook</a>    
+          <a class="button" href="mailto:emojuice@veggies.ch">
+            emojuice@veggies.ch
+          </a>
+          <a class="button" href="https://www.instagram.com/?hl=fr">
+            Instagram
+          </a>
+          <a class="button" href="https://fr-fr.facebook.com/">Facebook</a>    
         </div>
         <p class="copyrights">  
           Emojuice est une marque déposée par Veggies inc. 
