Ajout de class="opening-buttons"

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <img src="./img/emojuice.svg" alt="logo emojuice">
         <p>Boissons végétales préprarées avec amour</p>
       </div>
-      <a class="button" href="#poducts-access">Accédez à nos produits</a>
-      <br>
-      <a class="button button-white" href="#contacts">Nous contacter</a>
+      <div class="opening-buttons">
+        <a class="button" href="#poducts-access">Accédez à nos produits</a>
+        <a class="button button-white" href="#contacts">Nous contacter</a>
+      </div>
     </header>
     <div class="presentation">
       <h1>Manger sainement: "un art de vie"</h1>
