Correction h2 et ajouts de class=""

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="poducts-access" class="products">
       <h1>Nos produits</h1>
       <article class="banana">
-        <h2>Jus de banane</h2>
+        <h2>Jus banane</h2>
         <p>Notre plus grand classique.</p>
         <div class="products-bottom">
           <a href="kiwi.html" class="article-bottom">En savoir plus</a>
@@ -44,14 +44,14 @@
         </div>
       </article>
       <article class="kiwi">
-        <h2>Sirop de kiwi</h2>
+        <h2>Sirop kiwi</h2>
         <p>En vert et contre tous.</p>
         <div class="products-bottom">
           <a href="kiwi.html" class="article-bottom">En savoir plus</a>
           <img src="./img/kiwi.svg" alt="Illustration d'un kiwi">
         </div>
       </article>
-      <article>
+      <article class="coffee">
         <h2>Glace au café</h2>
         <p>"Un espresso pour Grorges!"</p>
         <div class="products-bottom">
@@ -59,7 +59,7 @@
           <img src="./img/coffee.svg" alt="Illustration d'un café">
         </div>
       </article>
-      <article>
+      <article class="strawberry">
         <h2>Délice à la fraise</h2>
         <p>La voilà qui ramène sa fraise</p>
         <div class="products-bottom">
