--- a/index.html
+++ b/index.html
@@ -67,28 +67,28 @@
           <img src="./img/strawberry.svg" alt="Illustration d'une fraise">
         </div>
       </article>
-      <Footer>
-        <h1 id="contacts">Nous contacter</h1>
-        <div class="footer-nav">
-          <a class="button" href="mailto:emojuice@veggies.ch">
-            emojuice@veggies.ch
-          </a>
-          <a class="button" href="https://www.instagram.com/?hl=fr">
-            Instagram
-          </a>
-          <a class="button" href="https://fr-fr.facebook.com/">Facebook</a>    
-        </div>
-        <p class="copyrights">  
-          Emojuice est une marque déposée par Veggies inc. 
-          Switzerland.
-        </p>
-        <div class="fruits-basket">
-          <img src="./img/banana.svg" alt="Illustration d'une banane">
-          <img src="./img/kiwi.svg" alt="Illustration d'un kiwi">
-          <img src="./img/apple.svg" alt="Illustration d'une pomme">
-          <img src="./img/pineapple.svg" alt="Illustration d'un ananas">
-        </div>
-      </Footer>
     </div>
+    <footer>
+      <h1 id="contacts">Nous contacter</h1>
+      <div class="footer-nav">
+        <a class="button" href="mailto:emojuice@veggies.ch">
+          emojuice@veggies.ch
+        </a>
+        <a class="button" href="https://www.instagram.com/?hl=fr">
+          Instagram
+        </a>
+        <a class="button" href="https://fr-fr.facebook.com/">Facebook</a>    
+      </div>
+      <p class="copyrights">  
+        Emojuice est une marque déposée par Veggies inc. 
+        Switzerland.
+      </p>
+      <div class="fruits-basket">
+        <img src="./img/banana.svg" alt="Illustration d'une banane">
+        <img src="./img/kiwi.svg" alt="Illustration d'un kiwi">
+        <img src="./img/apple.svg" alt="Illustration d'une pomme">
+        <img src="./img/pineapple.svg" alt="Illustration d'un ananas">
+      </div>
+    </footer>
   </body>
 </html>
