Ajouts de class et article
Ajouts des class='other-products' à <h1>, class='selection' de 'flavor-strawberry' à <img>coffee & class='button products-access-button'

--- a/kiwi.html
+++ b/kiwi.html
@@ -39,18 +39,23 @@
       </ul>
     </div>
     <div class="choosing">
-      <h1>Nos autres produits</h1>
-      <article class="flavor-strawberry">
-        <h2>Délices à la fraise</h2>
-        <img src="./img/plus.svg" alt="Illustration plus">
-        <img src="./img/strawberry.svg" alt="Illustration d'une fraise">
+      <h1 class="other-products">Nos autres produits</h1>
+      <article class="selection">
+        <article class="flavor-strawberry">
+          <h2>Délices à la fraise</h2>
+          <img src="./img/plus.svg" alt="Illustration plus">
+          <img src="./img/strawberry.svg" alt="Illustration d'une fraise">
+        </article>
+        <article class="flavor-coffee">
+          <h2>Glaces au café</h2>
+          <img src="./img/plus.svg" alt="Illustration plus">
+          <img src="./img/coffee.svg" alt="Illustration d'un café">
+        </article>
       </article>
-      <article class="flavor-coffee">
-        <h2>Glaces au café</h2>
-        <img src="./img/plus.svg" alt="Illustration plus">
-        <img src="./img/coffee.svg" alt="Illustration d'un café">
-      </article>
-      <a class="button" href="#poducts-access">Accédez à nos produits</a>
+      <a 
+        class="button products-access-button" href="#poducts-access">
+        Accédez à nos produits
+      </a>
     </div>
     <footer>
       <h1 id="contacts">Nous contacter</h1>
