Changement de graisse pour les liens

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
         <h2>Jus banane</h2>
         <p>Notre plus grand classique.</p>
         <div class="products-bottom">
-          <a href="kiwi.html" class="article-bottom">En savoir plus</a>
+          <a 
+            href="kiwi.html" class="article-bottom">
+            <strong>En savoir plus</strong>
+          </a>
           <img src="./img/banana.svg" alt="Illustration d'une banane">
         </div>
       </article>
@@ -47,7 +50,10 @@
         <h2>Sirop kiwi</h2>
         <p>En vert et contre tous.</p>
         <div class="products-bottom">
-          <a href="kiwi.html" class="article-bottom">En savoir plus</a>
+          <a 
+            href="kiwi.html" class="article-bottom">
+            <strong>En savoir plus</strong>
+          </a>
           <img src="./img/kiwi.svg" alt="Illustration d'un kiwi">
         </div>
       </article>
@@ -55,7 +61,10 @@
         <h2>Glace au café</h2>
         <p>"Un espresso pour Grorges!"</p>
         <div class="products-bottom">
-          <a href="kiwi.html" class="article-bottom">En savoir plus</a>
+          <a 
+            href="kiwi.html" class="article-bottom">
+            <strong>En savoir plus</strong>
+          </a>
           <img src="./img/coffee.svg" alt="Illustration d'un café">
         </div>
       </article>
@@ -63,7 +72,10 @@
         <h2>Délice à la fraise</h2>
         <p>La voilà qui ramène sa fraise</p>
         <div class="products-bottom">
-          <a href="kiwi.html" class="article-bottom">En savoir plus</a>
+          <a 
+            href="kiwi.html" class="article-bottom">
+            <strong>En savoir plus</strong>
+          </a>
           <img src="./img/strawberry.svg" alt="Illustration d'une fraise">
         </div>
       </article>
