Correction lien index.html

--- a/kiwi.html
+++ b/kiwi.html
@@ -53,7 +53,7 @@
         </article>
       </article>
       <a 
-        class="button products-access-button" href="#poducts-access">
+        class="button products-access-button" href="./index.html">
         Accédez à nos produits
       </a>
     </div>
